@@ -3,21 +3,10 @@ package carpet.utils;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.reflect.Field;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
-import java.util.Arrays;
-import java.util.Iterator;
-import java.util.Set;
+import java.lang.reflect.Modifier;
 
 public final class JavaVersionUtil {
-    public static final int JAVA_VERSION;
-
-    static {
-        JAVA_VERSION = getJavaVersion();
-        if (JAVA_VERSION >= 17) {
-            crackReflectionAccess();
-        }
-    }
+    public static final int JAVA_VERSION = getJavaVersion();
 
     private JavaVersionUtil() {}
 
@@ -50,26 +39,19 @@ public final class JavaVersionUtil {
         if (fieldType.isPrimitive()) {
             throw new RuntimeException("objectFieldAccessor does not work for primitive field types");
         }
+
         try {
             field.setAccessible(true);
         } catch (RuntimeException e) { // InaccessibleObjectException
-            if (JAVA_VERSION <= 8 || JAVA_VERSION >= 17) {
-                // For Java <= 8 we have natural unrestricted reflection
-                // For Java > 17 we have cracked reflective access
-                throw new AssertionError(e);
-            } else {
-                throw new RuntimeException("!!! You should add JVM args --illegal-access=permit", e);
+            if (JAVA_VERSION <= 8) {
+                throw e;
             }
-            /*
             long fieldOffset = UnsafeFieldAccessor.unsafe.objectFieldOffset(field);
             return new UnsafeFieldAccessor<>(ownerClass, fieldOffset);
-             */
         }
 
         try {
-            return new MethodHandleFieldAccessor<>(
-                    MethodHandles.lookup().unreflectGetter(field),
-                    MethodHandles.lookup().unreflectSetter(field));
+            return new MethodHandleFieldAccessor<>(MethodHandles.lookup().unreflectGetter(field));
         } catch (IllegalAccessException e) {
             throw new RuntimeException(e);
         }
@@ -77,17 +59,13 @@ public final class JavaVersionUtil {
 
     public interface FieldAccessor<T> {
         T get(Object instance);
-
-        void set(Object instance, T value);
     }
 
     private static class MethodHandleFieldAccessor<T> implements FieldAccessor<T> {
         private final MethodHandle getter;
-        private final MethodHandle setter;
 
-        private MethodHandleFieldAccessor(MethodHandle getter, MethodHandle setter) {
+        private MethodHandleFieldAccessor(MethodHandle getter) {
             this.getter = getter;
-            this.setter = setter;
         }
 
         @SuppressWarnings("unchecked")
@@ -99,18 +77,8 @@ public final class JavaVersionUtil {
                 throw new RuntimeException(e);
             }
         }
-
-        @Override
-        public void set(Object instance, T value) {
-            try {
-                setter.invoke(instance, value);
-            } catch (Throwable e) {
-                throw new RuntimeException(e);
-            }
-        }
     }
 
-    /*
     private static class UnsafeFieldAccessor<T> implements FieldAccessor<T> {
         private static final sun.misc.Unsafe unsafe = getUnsafe();
 
@@ -145,64 +113,6 @@ public final class JavaVersionUtil {
             } catch (ReflectiveOperationException e) {
                 throw new RuntimeException("Unable to get Unsafe instance", e);
             }
-        }
-    }
-     */
-
-    private static void crackReflectionAccess() {
-        Object classLoader = JavaVersionUtil.class.getClassLoader();
-        Object unnamedModule = invokeQuietly(classLoader, "getUnnamedModule");
-        Method method;
-        try {
-            method = unnamedModule.getClass().getDeclaredMethod( "implAddExportsOrOpens", String.class,
-                    unnamedModule.getClass(), boolean.class, boolean.class );
-        } catch (NoSuchMethodException e) {
-            throw new RuntimeException(e);
-        }
-        method.setAccessible(true);
-        Object moduleLayerBoot = invokeStaticQuietly(classForName("java.lang.ModuleLayer"), "boot");
-        ((Iterable<?>) invokeQuietly(moduleLayerBoot, "modules")).forEach(module -> {
-            try {
-                Set<String> packages = (Set<String>) invokeQuietly(module, "getPackages");
-                for(String eachPackage : packages) {
-                    method.invoke( module, eachPackage, unnamedModule, true, true );
-                }
-            } catch (InvocationTargetException e) {
-                throw new RuntimeException( e );
-            } catch (IllegalAccessException e) {
-                System.err.println("!!! PLEASE ADD JVM ARGS --add-opens java.base/java.lang=ALL-UNNAMED");
-                throw new RuntimeException(e);
-            }
-        } );
-    }
-    
-    private static Object invokeQuietly(Object instance, String methodName, Object... params) {
-        try {
-            Method method = Arrays.stream(instance.getClass().getMethods()).filter(
-                    m -> methodName.equals(m.getName()) && m.getParameterCount() == params.length)
-                    .findFirst().orElseThrow(IllegalArgumentException::new);
-            return method.invoke(instance, params);
-        } catch (IllegalAccessException | InvocationTargetException e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    private static Object invokeStaticQuietly(Class<?> clazz, String methodName, Object... params) {
-        try {
-            Method method = Arrays.stream(clazz.getMethods()).filter(
-                    m -> methodName.equals(m.getName()) && m.getParameterCount() == params.length)
-                    .findFirst().orElseThrow(IllegalArgumentException::new);
-            return method.invoke(null, params);
-        } catch (IllegalAccessException | InvocationTargetException e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    private static Class<?> classForName(String className) {
-        try {
-            return Class.forName(className);
-        } catch (ClassNotFoundException e) {
-            throw new RuntimeException(e);
         }
     }
 }
